--- a/elastic/examples/restore_notebook.ipynb
+++ b/elastic/examples/restore_notebook.ipynb
@@ -9,7 +9,17 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/numpy/_core/getlimits.py:548: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
+      "This warnings indicates broken support for the dtype!\n",
+      "  machar = _get_machar(dtype)\n"
+     ]
+    }
+   ],
    "source": [
     "import sys, os\n",
     "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
@@ -33,20 +43,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Declaring variable z\n",
-      "Declaring variable y\n",
-      "Declaring variable a\n",
-      "Declaring variable x\n",
-      "Declaring variable np\n",
-      "Declaring variable random\n",
-      "Declaring variable b\n",
-      "Declaring variable func\n"
+      "[[<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f59580ead40>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807f610>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807f310>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807f460>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807eda0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807ed70>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807f490>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f595807e8f0>]]\n",
+      "trying: ['random']\n",
+      "me:  0\n",
+      "trying: ['sc']\n",
+      "oops\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mEOFError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/mnt/c/Users/RECODE/Programs/ElasticNotebook/elastic/core/io/recover.py:45\u001b[0m, in \u001b[0;36mresume\u001b[0;34m(filename, write_log_location, notebook_name, optimizer_name)\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrying:\u001b[39m\u001b[38;5;124m\"\u001b[39m, [vs\u001b[38;5;241m.\u001b[39mname \u001b[38;5;28;01mfor\u001b[39;00m vs \u001b[38;5;129;01min\u001b[39;00m vs_list])\n\u001b[0;32m---> 45\u001b[0m obj_list \u001b[38;5;241m=\u001b[39m \u001b[43mdill\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43moutput_file\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     46\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(vs_list)):\n",
+      "File \u001b[0;32m/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/dill/_dill.py:297\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, ignore, **kwds)\u001b[0m\n\u001b[1;32m    292\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    293\u001b[0m \u001b[38;5;124;03mUnpickle an object from a file.\u001b[39;00m\n\u001b[1;32m    294\u001b[0m \n\u001b[1;32m    295\u001b[0m \u001b[38;5;124;03mSee :func:`loads` for keyword arguments.\u001b[39;00m\n\u001b[1;32m    296\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m--> 297\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mUnpickler\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mignore\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwds\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/dill/_dill.py:452\u001b[0m, in \u001b[0;36mUnpickler.load\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    451\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload\u001b[39m(\u001b[38;5;28mself\u001b[39m): \u001b[38;5;66;03m#NOTE: if settings change, need to update attributes\u001b[39;00m\n\u001b[0;32m--> 452\u001b[0m     obj \u001b[38;5;241m=\u001b[39m \u001b[43mStockUnpickler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    453\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mtype\u001b[39m(obj)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__module__\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(_main_module, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__name__\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__main__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n",
+      "\u001b[0;31mEOFError\u001b[0m: Ran out of input",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the checkpointed notebook here\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# %LoadCheckpoint checkpoints/numpy.pickle\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# %LoadCheckpoint checkpoints/pandas.pickle\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m \u001b[43mget_ipython\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_line_magic\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mLoadCheckpoint\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcheckpoints/pyspark.pickle\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# %LoadCheckpoint checkpoints/simple.pickle\u001b[39;00m\n",
+      "File \u001b[0;32m/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/IPython/core/interactiveshell.py:2480\u001b[0m, in \u001b[0;36mInteractiveShell.run_line_magic\u001b[0;34m(self, magic_name, line, _stack_depth)\u001b[0m\n\u001b[1;32m   2478\u001b[0m     kwargs[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlocal_ns\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mget_local_scope(stack_depth)\n\u001b[1;32m   2479\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbuiltin_trap:\n\u001b[0;32m-> 2480\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfn\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2482\u001b[0m \u001b[38;5;66;03m# The code below prevents the output from being displayed\u001b[39;00m\n\u001b[1;32m   2483\u001b[0m \u001b[38;5;66;03m# when using magics with decorator @output_can_be_silenced\u001b[39;00m\n\u001b[1;32m   2484\u001b[0m \u001b[38;5;66;03m# when the last Python token in the expression is a ';'.\u001b[39;00m\n\u001b[1;32m   2485\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mgetattr\u001b[39m(fn, magic\u001b[38;5;241m.\u001b[39mMAGIC_OUTPUT_CAN_BE_SILENCED, \u001b[38;5;28;01mFalse\u001b[39;00m):\n",
+      "File \u001b[0;32m/mnt/c/Users/RECODE/Programs/ElasticNotebook/ElasticNotebook.py:251\u001b[0m, in \u001b[0;36mElasticNotebook.LoadCheckpoint\u001b[0;34m(self, filename)\u001b[0m\n\u001b[1;32m    243\u001b[0m \u001b[38;5;129m@line_magic\u001b[39m\n\u001b[1;32m    244\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mLoadCheckpoint\u001b[39m(\u001b[38;5;28mself\u001b[39m, filename\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m    245\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    246\u001b[0m \u001b[38;5;124;03m        %LoadCheckpoint file.pickle: Load a checkpoint file and restore notebook state.\u001b[39;00m\n\u001b[1;32m    247\u001b[0m \u001b[38;5;124;03m        Args:\u001b[39;00m\n\u001b[1;32m    248\u001b[0m \u001b[38;5;124;03m            filename: File to read checkpoint from. If empty, reads from a default location (see io/migrate.py).\u001b[39;00m\n\u001b[1;32m    249\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m    250\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdependency_graph, variables, vss_to_migrate, vss_to_recompute, oes_to_recompute, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mudfs \u001b[38;5;241m=\u001b[39m \\\n\u001b[0;32m--> 251\u001b[0m         \u001b[43mresume\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrite_log_location\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnotebook_name\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moptimizer_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    253\u001b[0m     \u001b[38;5;66;03m# Recompute missing VSs and redeclare variables into the kernel.\u001b[39;00m\n\u001b[1;32m    254\u001b[0m     restore_notebook(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdependency_graph, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mshell, variables, oes_to_recompute, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwrite_log_location,\n\u001b[1;32m    255\u001b[0m                      \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnotebook_name, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moptimizer_name)\n",
+      "File \u001b[0;32m/mnt/c/Users/RECODE/Programs/ElasticNotebook/elastic/core/io/recover.py:54\u001b[0m, in \u001b[0;36mresume\u001b[0;34m(filename, write_log_location, notebook_name, optimizer_name)\u001b[0m\n\u001b[1;32m     51\u001b[0m             \u001b[38;5;66;03m#unpickling failed. Rerun cells to retrieve variable(s).\u001b[39;00m\n\u001b[1;32m     52\u001b[0m             \u001b[38;5;28;01mfor\u001b[39;00m vs \u001b[38;5;129;01min\u001b[39;00m vs_list:\n\u001b[1;32m     53\u001b[0m                 metadata\u001b[38;5;241m.\u001b[39mces_to_recompute \u001b[38;5;241m=\u001b[39m metadata\u001b[38;5;241m.\u001b[39mces_to_recompute\u001b[38;5;241m.\u001b[39munion(\n\u001b[0;32m---> 54\u001b[0m                         \u001b[43mmetadata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrecomputation_ces\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43moutput_ce\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m filename:\n\u001b[1;32m     58\u001b[0m     metadata \u001b[38;5;241m=\u001b[39m adapter\u001b[38;5;241m.\u001b[39mread_all(Path(filename))\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'dict' object is not callable"
      ]
     }
    ],
    "source": [
     "# Load the checkpointed notebook here\n",
-    "%LoadCheckpoint checkpoints/simple.pickle"
+    "# %LoadCheckpoint checkpoints/numpy.pickle\n",
+    "# %LoadCheckpoint checkpoints/pandas.pickle\n",
+    "%LoadCheckpoint checkpoints/pyspark.pickle\n",
+    "# %LoadCheckpoint checkpoints/simple.pickle"
    ]
   },
   {
@@ -66,8 +96,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\t b\t func\t np\t os\t random\t sys\t x\t y\t \n",
-      "z\t \n"
+      "os\t sys\t \n"
      ]
     }
    ],
@@ -108,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
