--- a/elastic/examples/restore_notebook.ipynb
+++ b/elastic/examples/restore_notebook.ipynb
@@ -43,44 +43,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac402b30>, <elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac403fa0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac402b30>, <elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac402260>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac401e70>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac401f30>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac401f00>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac401e10>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac402230>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7fb1ac402b30>]]\n",
-      "trying: ['x', 'b']\n",
-      "me:  1\n",
+      "[[<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f9606bef520>]]\n",
+      "trying: ['mem_usage']\n",
       "me:  4\n",
-      "trying: ['x', 'a']\n",
-      "me:  1\n",
-      "me:  1\n",
-      "trying: ['y']\n",
-      "me:  1\n",
-      "trying: ['z']\n",
-      "me:  1\n",
-      "trying: ['np']\n",
-      "me:  2\n",
-      "trying: ['random']\n",
-      "me:  2\n",
-      "trying: ['func']\n",
-      "me:  4\n",
-      "trying: ['x']\n",
-      "me:  1\n",
-      "Declaring variable x\n",
-      "Declaring variable x\n",
-      "Declaring variable a\n",
-      "Declaring variable y\n",
-      "Declaring variable z\n",
-      "Declaring variable x\n",
-      "Declaring variable np\n",
-      "Declaring variable random\n",
-      "Declaring variable b\n",
-      "Declaring variable func\n"
+      "Rerunning cell 1\n",
+      "Rerunning cell 2\n",
+      "Rerunning cell 4\n",
+      "Declaring variable mem_usage\n",
+      "Rerunning cell 6\n",
+      "Rerunning cell 7\n",
+      "Rerunning cell 8\n",
+      "Rerunning cell 9\n",
+      "Rerunning cell 10\n",
+      "Rerunning cell 11\n"
      ]
     }
    ],
    "source": [
     "# Load the checkpointed notebook here\n",
+    "# OK\n",
     "# %LoadCheckpoint checkpoints/numpy.pickle\n",
+    "# OK\n",
     "# %LoadCheckpoint checkpoints/pandas.pickle\n",
-    "# %LoadCheckpoint checkpoints/pyspark.pickle\n",
-    "%LoadCheckpoint checkpoints/simple.pickle"
+    "Error\n",
+    "%LoadCheckpoint checkpoints/pyspark.pickle\n",
+    "# OK\n",
+    "# %LoadCheckpoint checkpoints/simple.pickle"
    ]
   },
   {
@@ -100,30 +88,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a\t b\t func\t np\t os\t random\t sys\t x\t y\t \n",
-      "z\t \n"
+      "col\t compare_floats\t compare_ints\t converted_float\t converted_int\t converted_obj\t dow\t dow_cat\t dtype\t \n",
+      "gl\t gl_float\t gl_int\t gl_obj\t mean_usage_b\t mean_usage_mb\t mem_usage\t num_total_values\t num_unique_values\t \n",
+      "optimized_gl\t os\t pd\t selected_dtype\t sys\t \n"
      ]
     }
    ],
    "source": [
     "# See all variables have restored.\n",
-    "%who\n"
+    "%who"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
