--- a/elastic/examples/pandas.ipynb
+++ b/elastic/examples/pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -10,12 +10,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/numpy/_core/getlimits.py:548: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
-      "This warnings indicates broken support for the dtype!\n",
-      "  machar = _get_machar(dtype)\n"
+      "The ElasticNotebook extension is already loaded. To reload it, use:\n",
+      "  %reload_ext ElasticNotebook\n"
      ]
     }
    ],
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -44,7 +43,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140650152356800\n"
+      "140612161326000\n"
      ]
     }
    ],
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -74,7 +73,7 @@
       "Columns: 161 entries, date to acquisition_info\n",
       "dtypes: float64(5), int64(82), object(74)\n",
       "memory usage: 12.8 MB\n",
-      "140650152357712\n"
+      "140612161011664\n"
      ]
     }
    ],
@@ -87,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -300,7 +299,7 @@
        "[5 rows x 161 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -377,7 +376,7 @@
      "text": [
       "1.52 MB\n",
       "0.20 MB\n",
-      "140650144424736 140650143990976 140650144803632\n"
+      "140612161338816 140612184052912 140612184051040\n"
      ]
     }
    ],
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -408,7 +407,7 @@
      "text": [
       "0.09 MB\n",
       "0.05 MB\n",
-      "140650144807376 140650143996448 140650144892384\n"
+      "140612161334304 140612161082496 140612184142704\n"
      ]
     }
    ],
@@ -426,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -439,7 +438,7 @@
      "text": [
       "12.77 MB\n",
       "11.40 MB\n",
-      "140650143990256\n"
+      "140612182642640\n"
      ]
     }
    ],
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -467,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140650144417104\n"
+      "140612184145488\n"
      ]
     },
     {
@@ -644,7 +643,7 @@
        "[4 rows x 74 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -682,7 +681,7 @@
       "4    Thu\n",
       "Name: day_of_week, dtype: category\n",
       "Categories (7, object): ['Fri', 'Mon', 'Sat', 'Sun', 'Thu', 'Tue', 'Wed']\n",
-      "140650143167248 140650143311008\n"
+      "140612182856256 140612182717824\n"
      ]
     }
    ],
@@ -697,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -708,7 +707,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140650144420800\n"
+      "140612182715616\n"
      ]
     }
    ],
@@ -727,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -738,45 +737,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps): 363989998.2099427\n",
+      "migration speed (bps): 102170518.05733638\n",
       "---------------------------\n",
       "variables to migrate:\n",
-      "mem_usage 144\n",
       "---------------------------\n",
       "variables to recompute:\n",
-      "gl_int 1594224\n",
-      "num_unique_values 28\n",
+      "dtype 55\n",
+      "selected_dtype inf\n",
+      "converted_int 209124\n",
       "col 65\n",
-      "gl inf\n",
       "compare_ints inf\n",
       "converted_float 48744\n",
-      "converted_int 209124\n",
-      "converted_obj inf\n",
+      "compare_floats inf\n",
+      "num_unique_values 28\n",
       "dow_cat 3294\n",
-      "dow inf\n",
+      "pd 72\n",
+      "mem_usage 144\n",
+      "gl_int 1594224\n",
+      "converted_obj inf\n",
       "gl_float 97344\n",
       "mean_usage_b 32\n",
-      "mean_usage_mb 32\n",
-      "dtype 55\n",
-      "pd 72\n",
-      "optimized_gl inf\n",
-      "compare_floats inf\n",
-      "selected_dtype inf\n",
+      "gl inf\n",
       "num_total_values 28\n",
+      "optimized_gl inf\n",
+      "dow inf\n",
+      "mean_usage_mb 32\n",
       "gl_obj inf\n",
-      "['gl_int', 'num_unique_values', 'col', 'gl', 'compare_ints', 'converted_float', 'converted_int', 'converted_obj', 'dow_cat', 'dow', 'gl_float', 'mean_usage_b', 'mean_usage_mb', 'dtype', 'pd', 'optimized_gl', 'compare_floats', 'selected_dtype', 'num_total_values', 'gl_obj']\n",
+      "['dtype', 'selected_dtype', 'converted_int', 'col', 'compare_ints', 'converted_float', 'compare_floats', 'num_unique_values', 'dow_cat', 'pd', 'mem_usage', 'gl_int', 'converted_obj', 'gl_float', 'mean_usage_b', 'gl', 'num_total_values', 'optimized_gl', 'dow', 'mean_usage_mb', 'gl_obj']\n",
       "---------------------------\n",
       "cells to recompute:\n",
-      "10 0.19881796836853027\n",
-      "9 0.006204128265380859\n",
-      "8 0.1662130355834961\n",
-      "7 0.08743715286254883\n",
-      "5 0.04432368278503418\n",
-      "1 0.04063725471496582\n",
-      "0 0.05743765830993652\n",
-      "3 0.06798076629638672\n",
-      "6 0.011860132217407227\n",
-      "[1, 2, 4, 6, 7, 8, 9, 10, 11]\n",
+      "3 0.029810428619384766\n",
+      "9 0.002235889434814453\n",
+      "8 0.05683445930480957\n",
+      "13 0.008840084075927734\n",
+      "12 0.026416778564453125\n",
+      "21 0.053435564041137695\n",
+      "18 0.040331363677978516\n",
+      "17 0.006666421890258789\n",
+      "16 0.018441200256347656\n",
+      "1 0.11776232719421387\n",
+      "6 0.006639957427978516\n",
+      "5 0.03780770301818848\n",
+      "10 0.04653763771057129\n",
+      "14 0.019117355346679688\n",
+      "15 0.0005536079406738281\n",
+      "0 0.2000107765197754\n",
+      "11 0.06448984146118164\n",
+      "19 0.0575869083404541\n",
+      "7 0.03919053077697754\n",
+      "20 0.004798412322998047\n",
+      "[1, 2, 4, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]\n",
       "Checkpoint saved to: checkpoints/pandas.pickle\n"
      ]
     }
@@ -787,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
