--- a/elastic/examples/pyspark.ipynb
+++ b/elastic/examples/pyspark.ipynb
@@ -12,17 +12,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/numpy/_core/getlimits.py:548: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
-      "This warnings indicates broken support for the dtype!\n",
-      "  machar = _get_machar(dtype)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
@@ -64,11 +54,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "24/11/20 17:06:12 WARN Utils: Your hostname, DESKTOP-RMIV78O resolves to a loopback address: 127.0.1.1; using 172.30.48.1 instead (on interface eth2)\n",
-      "24/11/20 17:06:12 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/11/21 23:22:37 WARN Utils: Your hostname, DESKTOP-RMIV78O resolves to a loopback address: 127.0.1.1; using 10.255.255.254 instead (on interface lo)\n",
+      "24/11/21 23:22:37 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/11/20 17:06:13 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/11/21 23:22:37 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -114,7 +104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.14157612\n"
+      "3.14130612\n"
      ]
     }
    ],
@@ -145,17 +135,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps): 596440467.8503126\n",
+      "migration speed (bps): 133089870.21357442\n",
       "---------------------------\n",
       "variables to migrate:\n",
-      "random 72\n",
-      "sc 48\n",
-      "count 28\n",
-      "pi 24\n",
-      "pyspark 72\n",
-      "inside 144\n",
-      "num_samples 28\n",
       "findspark 72\n",
+      "inside 144\n",
+      "count 28\n",
+      "random 72\n",
+      "pi 24\n",
+      "num_samples 28\n",
+      "pyspark 72\n",
+      "sc 48\n",
       "---------------------------\n",
       "variables to recompute:\n",
       "[]\n",
@@ -192,57 +182,14 @@
     }
    ],
    "source": [
-    "%Checkpoint checkpoints/pyspark.pickle\n"
+    "%Checkpoint checkpoints/pyspark.pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "count\t findspark\t inside\t num_samples\t os\t pi\t pyspark\t random\t sc\t \n",
-      "sys\t \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "24/11/20 17:22:09 WARN JavaUtils: Attempt to delete using native Unix OS command failed for path = /tmp/spark-64a043ca-3b0d-4315-9653-302f8d88d487/pyspark-cb9506df-530c-4651-a7fc-0292f448484d. Falling back to Java IO way\n",
-      "java.io.IOException: Failed to delete: /tmp/spark-64a043ca-3b0d-4315-9653-302f8d88d487/pyspark-cb9506df-530c-4651-a7fc-0292f448484d\n",
-      "\tat org.apache.spark.network.util.JavaUtils.deleteRecursivelyUsingUnixNative(JavaUtils.java:174)\n",
-      "\tat org.apache.spark.network.util.JavaUtils.deleteRecursively(JavaUtils.java:109)\n",
-      "\tat org.apache.spark.network.util.JavaUtils.deleteRecursively(JavaUtils.java:90)\n",
-      "\tat org.apache.spark.util.SparkFileUtils.deleteRecursively(SparkFileUtils.scala:121)\n",
-      "\tat org.apache.spark.util.SparkFileUtils.deleteRecursively$(SparkFileUtils.scala:120)\n",
-      "\tat org.apache.spark.util.Utils$.deleteRecursively(Utils.scala:1126)\n",
-      "\tat org.apache.spark.util.ShutdownHookManager$.$anonfun$new$4(ShutdownHookManager.scala:65)\n",
-      "\tat org.apache.spark.util.ShutdownHookManager$.$anonfun$new$4$adapted(ShutdownHookManager.scala:62)\n",
-      "\tat scala.collection.IndexedSeqOptimized.foreach(IndexedSeqOptimized.scala:36)\n",
-      "\tat scala.collection.IndexedSeqOptimized.foreach$(IndexedSeqOptimized.scala:33)\n",
-      "\tat scala.collection.mutable.ArrayOps$ofRef.foreach(ArrayOps.scala:198)\n",
-      "\tat org.apache.spark.util.ShutdownHookManager$.$anonfun$new$2(ShutdownHookManager.scala:62)\n",
-      "\tat org.apache.spark.util.SparkShutdownHook.run(ShutdownHookManager.scala:214)\n",
-      "\tat org.apache.spark.util.SparkShutdownHookManager.$anonfun$runAll$2(ShutdownHookManager.scala:188)\n",
-      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\n",
-      "\tat org.apache.spark.util.Utils$.logUncaughtExceptions(Utils.scala:1928)\n",
-      "\tat org.apache.spark.util.SparkShutdownHookManager.$anonfun$runAll$1(ShutdownHookManager.scala:188)\n",
-      "\tat scala.runtime.java8.JFunction0$mcV$sp.apply(JFunction0$mcV$sp.java:23)\n",
-      "\tat scala.util.Try$.apply(Try.scala:213)\n",
-      "\tat org.apache.spark.util.SparkShutdownHookManager.runAll(ShutdownHookManager.scala:188)\n",
-      "\tat org.apache.spark.util.SparkShutdownHookManager$$anon$2.run(ShutdownHookManager.scala:178)\n",
-      "\tat java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)\n",
-      "\tat java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)\n",
-      "\tat java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1128)\n",
-      "\tat java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:628)\n",
-      "\tat java.base/java.lang.Thread.run(Thread.java:829)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%who"
    ]
