--- a/elastic/examples/restore_notebook.ipynb
+++ b/elastic/examples/restore_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -11,12 +11,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/numpy/_core/getlimits.py:548: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
-      "This warnings indicates broken support for the dtype!\n",
-      "  machar = _get_machar(dtype)\n"
+      "The ElasticNotebook extension is already loaded. To reload it, use:\n",
+      "  %reload_ext ElasticNotebook\n"
      ]
     }
    ],
@@ -28,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -43,19 +42,40 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f9606bef520>]]\n",
-      "trying: ['mem_usage']\n",
-      "me:  4\n",
-      "Rerunning cell 1\n",
-      "Rerunning cell 2\n",
-      "Rerunning cell 4\n",
-      "Declaring variable mem_usage\n",
-      "Rerunning cell 6\n",
-      "Rerunning cell 7\n",
-      "Rerunning cell 8\n",
-      "Rerunning cell 9\n",
-      "Rerunning cell 10\n",
-      "Rerunning cell 11\n"
+      "[[<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738d1e38e0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738c680790>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738d1807c0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738d1f0e50>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738c680670>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738b0850f0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738c66d810>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738d1e3d90>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738c680100>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f738c680310>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x7f74b8342bc0>]]\n",
+      "trying: ['knn']\n",
+      "me:  7\n",
+      "trying: ['iris_y_train']\n",
+      "me:  6\n",
+      "trying: ['np']\n",
+      "me:  0\n",
+      "trying: ['iris_X']\n",
+      "me:  5\n",
+      "trying: ['iris_X_train']\n",
+      "me:  6\n",
+      "trying: ['datasets']\n",
+      "me:  0\n",
+      "trying: ['iris_y']\n",
+      "me:  5\n",
+      "trying: ['indices']\n",
+      "me:  7\n",
+      "trying: ['KNeighborsClassifier']\n",
+      "me:  0\n",
+      "trying: ['iris_X_test']\n",
+      "me:  6\n",
+      "trying: ['iris_y_test']\n",
+      "me:  6\n",
+      "Declaring variable np\n",
+      "Declaring variable datasets\n",
+      "Declaring variable KNeighborsClassifier\n",
+      "Declaring variable iris_X\n",
+      "Declaring variable iris_y\n",
+      "Declaring variable iris_y_train\n",
+      "Declaring variable iris_X_train\n",
+      "Declaring variable iris_X_test\n",
+      "Declaring variable iris_y_test\n",
+      "Declaring variable knn\n",
+      "Declaring variable indices\n"
      ]
     }
    ],
@@ -65,15 +85,17 @@
     "# %LoadCheckpoint checkpoints/numpy.pickle\n",
     "# OK\n",
     "# %LoadCheckpoint checkpoints/pandas.pickle\n",
-    "Error\n",
-    "%LoadCheckpoint checkpoints/pyspark.pickle\n",
+    "# Error\n",
+    "# %LoadCheckpoint checkpoints/pyspark.pickle\n",
+    "# Error\n",
+    "%LoadCheckpoint checkpoints/pytorch.pickle\n",
     "# OK\n",
     "# %LoadCheckpoint checkpoints/simple.pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -88,9 +110,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "col\t compare_floats\t compare_ints\t converted_float\t converted_int\t converted_obj\t dow\t dow_cat\t dtype\t \n",
-      "gl\t gl_float\t gl_int\t gl_obj\t mean_usage_b\t mean_usage_mb\t mem_usage\t num_total_values\t num_unique_values\t \n",
-      "optimized_gl\t os\t pd\t selected_dtype\t sys\t \n"
+      "KNeighborsClassifier\t col\t compare_floats\t compare_ints\t converted_float\t converted_int\t converted_obj\t datasets\t dow\t \n",
+      "dow_cat\t dtype\t gl\t gl_float\t gl_int\t gl_obj\t indices\t iris_X\t iris_X_test\t \n",
+      "iris_X_train\t iris_y\t iris_y_test\t iris_y_train\t knn\t mean_usage_b\t mean_usage_mb\t mem_usage\t np\t \n",
+      "num_total_values\t num_unique_values\t optimized_gl\t os\t pd\t selected_dtype\t sys\t \n"
      ]
     }
    ],
@@ -98,6 +121,13 @@
     "# See all variables have restored.\n",
     "%who"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
