--- a/elastic/examples/numpy.ipynb
+++ b/elastic/examples/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -96,10 +96,10 @@
     {
      "data": {
       "text/plain": [
-       "array([2, 2, 0, 1, 1, 0, 2, 0, 0, 2])"
+       "array([1, 1, 2, 0, 1, 2, 1, 1, 2, 1])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -126,19 +126,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps): 362042663.9485383\n",
+      "migration speed (bps): 91570544.26174743\n",
       "---------------------------\n",
       "variables to migrate:\n",
-      "iris_X_train 4608\n",
-      "iris_X_test 448\n",
-      "iris_y 1312\n",
-      "KNeighborsClassifier 1480\n",
-      "np 72\n",
-      "indices 28\n",
       "knn 48\n",
-      "iris_X 4928\n",
-      "datasets 72\n",
       "iris_y_train 1232\n",
+      "np 72\n",
+      "iris_X 4928\n",
+      "iris_X_train 4608\n",
+      "datasets 72\n",
+      "iris_y 1312\n",
+      "indices 28\n",
+      "KNeighborsClassifier 1480\n",
+      "iris_X_test 448\n",
       "iris_y_test 192\n",
       "---------------------------\n",
       "variables to recompute:\n",
@@ -156,12 +156,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier\t datasets\t indices\t iris_X\t iris_X_test\t iris_X_train\t iris_y\t iris_y_test\t iris_y_train\t \n",
+      "knn\t np\t os\t sys\t \n"
+     ]
+    }
+   ],
    "source": [
     "%who"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
