--- a/elastic/examples/simple.ipynb
+++ b/elastic/examples/simple.ipynb
@@ -9,17 +9,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/mnt/c/Users/RECODE/Programs/ElasticNotebook/.linux-venv/lib/python3.10/site-packages/numpy/_core/getlimits.py:548: UserWarning: Signature b'\\x00\\xd0\\xcc\\xcc\\xcc\\xcc\\xcc\\xcc\\xfb\\xbf\\x00\\x00\\x00\\x00\\x00\\x00' for <class 'numpy.longdouble'> does not match any known type: falling back to type probe function.\n",
-      "This warnings indicates broken support for the dtype!\n",
-      "  machar = _get_machar(dtype)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
@@ -147,17 +137,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps): 659402723.2714131\n",
+      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 727796499.3742887\n",
+      "|- total bytes: 799920000\n",
+      "|- total read time: 0.0003464221954345703\n",
+      "|- total write time: 1.0987520217895508\n",
+      "|- alpha: 1\n",
+      "graph.variable_snapshots.values(): dict_values([[<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x112162960>, <elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233b0b0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233b710>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233bb90>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233b770>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233b6b0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233b3e0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11233aa80>, <elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x1123a42c0>], [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x1123a41d0>]])\n",
       "---------------------------\n",
       "variables to migrate:\n",
-      "np 72\n",
-      "random 72\n",
       "x 28\n",
+      "b 28\n",
+      "np 72\n",
       "y 28\n",
       "z 28\n",
-      "b 28\n",
-      "func 144\n",
       "a 28\n",
+      "func 160\n",
+      "random 72\n",
       "---------------------------\n",
       "variables to recompute:\n",
       "[]\n",
@@ -207,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
