--- a/elastic/examples/numpy.ipynb
+++ b/elastic/examples/numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -12,16 +12,7 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ElasticNotebook extension is already loaded. To reload it, use:\n",
-      "  %reload_ext ElasticNotebook\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys, os\n",
     "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
@@ -30,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -50,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -68,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -96,10 +87,10 @@
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 2, 0, 1, 2, 1, 1, 2, 1])"
+       "array([0, 1, 1, 1, 2, 2, 2, 1, 0, 2])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -126,20 +117,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps): 91570544.26174743\n",
+      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 1157843579.7235138\n",
+      "|- total bytes: 799920000\n",
+      "|- total read time: 0.00014328956604003906\n",
+      "|- total write time: 0.6907272338867188\n",
+      "|- alpha: 1\n",
+      "---------------------------\n",
+      "all variables:\n",
+      "name: KNeighborsClassifier\n",
+      "name: datasets\n",
+      "name: np\n",
+      "name: iris_X\n",
+      "name: iris_y\n",
+      "name: iris_y_train\n",
+      "name: indices\n",
+      "name: iris_y_test\n",
+      "name: iris_X_train\n",
+      "name: iris_X_test\n",
+      "name: knn\n",
       "---------------------------\n",
       "variables to migrate:\n",
-      "knn 48\n",
-      "iris_y_train 1232\n",
-      "np 72\n",
-      "iris_X 4928\n",
-      "iris_X_train 4608\n",
-      "datasets 72\n",
-      "iris_y 1312\n",
-      "indices 28\n",
-      "KNeighborsClassifier 1480\n",
-      "iris_X_test 448\n",
-      "iris_y_test 192\n",
+      "name: iris_X, size: 4928\n",
+      "name: iris_y_test, size: 192\n",
+      "name: KNeighborsClassifier, size: 1704\n",
+      "name: iris_y, size: 1312\n",
+      "name: iris_X_train, size: 4608\n",
+      "name: iris_X_test, size: 448\n",
+      "name: indices, size: 28\n",
+      "name: np, size: 72\n",
+      "name: datasets, size: 72\n",
+      "name: iris_y_train, size: 1232\n",
+      "name: knn, size: 48\n",
       "---------------------------\n",
       "variables to recompute:\n",
       "[]\n",
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
