--- a/elastic/examples/pandas.ipynb
+++ b/elastic/examples/pandas.ipynb
@@ -2,22 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The ElasticNotebook extension is already loaded. To reload it, use:\n",
-      "  %reload_ext ElasticNotebook\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the data here: https://data.world/dataquest/mlb-game-logs\n",
     "import sys, os\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -43,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140612161326000\n"
+      "4624181552\n"
      ]
     }
    ],
@@ -57,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -72,8 +63,8 @@
       "RangeIndex: 2430 entries, 0 to 2429\n",
       "Columns: 161 entries, date to acquisition_info\n",
       "dtypes: float64(5), int64(82), object(74)\n",
-      "memory usage: 12.8 MB\n",
-      "140612161011664\n"
+      "memory usage: 11.5 MB\n",
+      "4624183472\n"
      ]
     }
    ],
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -299,7 +290,7 @@
        "[5 rows x 161 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -328,7 +319,7 @@
      "text": [
       "Average memory usage for float columns: 0.02 MB\n",
       "Average memory usage for int columns: 0.02 MB\n",
-      "Average memory usage for object columns: 0.15 MB\n"
+      "Average memory usage for object columns: 0.13 MB\n"
      ]
     }
    ],
@@ -343,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -363,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -376,7 +367,7 @@
      "text": [
       "1.52 MB\n",
       "0.20 MB\n",
-      "140612161338816 140612184052912 140612184051040\n"
+      "4626567904 4626567952 4626853344\n"
      ]
     }
    ],
@@ -394,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -407,7 +398,7 @@
      "text": [
       "0.09 MB\n",
       "0.05 MB\n",
-      "140612161334304 140612161082496 140612184142704\n"
+      "4626565984 4626856848 4626957472\n"
      ]
     }
    ],
@@ -425,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -436,9 +427,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12.77 MB\n",
-      "11.40 MB\n",
-      "140612182642640\n"
+      "11.47 MB\n",
+      "10.10 MB\n",
+      "4626143072\n"
      ]
     }
    ],
@@ -455,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -466,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140612184145488\n"
+      "4626854976\n"
      ]
     },
     {
@@ -643,7 +634,7 @@
        "[4 rows x 74 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -681,7 +672,7 @@
       "4    Thu\n",
       "Name: day_of_week, dtype: category\n",
       "Categories (7, object): ['Fri', 'Mon', 'Sat', 'Sun', 'Thu', 'Tue', 'Wed']\n",
-      "140612182856256 140612182717824\n"
+      "4620802992 4626141440\n"
      ]
     }
    ],
@@ -696,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -707,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "140612182715616\n"
+      "4627464752\n"
      ]
     }
    ],
@@ -726,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -737,56 +728,72 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps): 102170518.05733638\n",
+      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 1096115515.982681\n",
+      "|- total bytes: 799920000\n",
+      "|- total read time: -0.00027298927307128906\n",
+      "|- total write time: 0.7300500869750977\n",
+      "|- alpha: 1\n",
+      "---------------------------\n",
+      "all variables:\n",
+      "name: pd\n",
+      "name: gl\n",
+      "name: selected_dtype\n",
+      "name: mean_usage_b\n",
+      "name: mean_usage_mb\n",
+      "name: dtype\n",
+      "name: mem_usage\n",
+      "name: compare_ints\n",
+      "name: gl_int\n",
+      "name: converted_int\n",
+      "name: compare_floats\n",
+      "name: converted_float\n",
+      "name: gl_float\n",
+      "name: optimized_gl\n",
+      "name: gl_obj\n",
+      "name: dow_cat\n",
+      "name: dow\n",
+      "name: converted_obj\n",
+      "name: col\n",
+      "name: num_total_values\n",
+      "name: num_unique_values\n",
       "---------------------------\n",
       "variables to migrate:\n",
+      "name: mem_usage, size: 160\n",
       "---------------------------\n",
       "variables to recompute:\n",
-      "dtype 55\n",
-      "selected_dtype inf\n",
-      "converted_int 209124\n",
-      "col 65\n",
-      "compare_ints inf\n",
-      "converted_float 48744\n",
-      "compare_floats inf\n",
-      "num_unique_values 28\n",
-      "dow_cat 3294\n",
-      "pd 72\n",
-      "mem_usage 144\n",
-      "gl_int 1594224\n",
-      "converted_obj inf\n",
-      "gl_float 97344\n",
-      "mean_usage_b 32\n",
-      "gl inf\n",
-      "num_total_values 28\n",
-      "optimized_gl inf\n",
-      "dow inf\n",
-      "mean_usage_mb 32\n",
-      "gl_obj inf\n",
-      "['dtype', 'selected_dtype', 'converted_int', 'col', 'compare_ints', 'converted_float', 'compare_floats', 'num_unique_values', 'dow_cat', 'pd', 'mem_usage', 'gl_int', 'converted_obj', 'gl_float', 'mean_usage_b', 'gl', 'num_total_values', 'optimized_gl', 'dow', 'mean_usage_mb', 'gl_obj']\n",
+      "name: gl_int, size: 1594244\n",
+      "name: dow_cat, size: 3258\n",
+      "name: gl_obj, size: inf\n",
+      "name: converted_obj, size: inf\n",
+      "name: dtype, size: 47\n",
+      "name: pd, size: 72\n",
+      "name: gl_float, size: 97364\n",
+      "name: mean_usage_mb, size: 32\n",
+      "name: col, size: 57\n",
+      "name: num_total_values, size: 28\n",
+      "name: dow, size: inf\n",
+      "name: num_unique_values, size: 28\n",
+      "name: optimized_gl, size: inf\n",
+      "name: compare_ints, size: inf\n",
+      "name: converted_float, size: 48764\n",
+      "name: gl, size: inf\n",
+      "name: selected_dtype, size: inf\n",
+      "name: compare_floats, size: inf\n",
+      "name: mean_usage_b, size: 32\n",
+      "name: converted_int, size: 209144\n",
+      "['gl_int', 'dow_cat', 'gl_obj', 'converted_obj', 'dtype', 'pd', 'gl_float', 'mean_usage_mb', 'col', 'num_total_values', 'dow', 'num_unique_values', 'optimized_gl', 'compare_ints', 'converted_float', 'gl', 'selected_dtype', 'compare_floats', 'mean_usage_b', 'converted_int']\n",
       "---------------------------\n",
       "cells to recompute:\n",
-      "3 0.029810428619384766\n",
-      "9 0.002235889434814453\n",
-      "8 0.05683445930480957\n",
-      "13 0.008840084075927734\n",
-      "12 0.026416778564453125\n",
-      "21 0.053435564041137695\n",
-      "18 0.040331363677978516\n",
-      "17 0.006666421890258789\n",
-      "16 0.018441200256347656\n",
-      "1 0.11776232719421387\n",
-      "6 0.006639957427978516\n",
-      "5 0.03780770301818848\n",
-      "10 0.04653763771057129\n",
-      "14 0.019117355346679688\n",
-      "15 0.0005536079406738281\n",
-      "0 0.2000107765197754\n",
-      "11 0.06448984146118164\n",
-      "19 0.0575869083404541\n",
-      "7 0.03919053077697754\n",
-      "20 0.004798412322998047\n",
-      "[1, 2, 4, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]\n",
+      "cell num: 9, cell runtime: 0.0013208389282226562\n",
+      "cell num: 1, cell runtime: 0.029808759689331055\n",
+      "cell num: 10, cell runtime: 0.03009200096130371\n",
+      "cell num: 5, cell runtime: 0.010228872299194336\n",
+      "cell num: 7, cell runtime: 0.04289674758911133\n",
+      "cell num: 0, cell runtime: 0.03040003776550293\n",
+      "cell num: 8, cell runtime: 0.03224921226501465\n",
+      "cell num: 6, cell runtime: 0.003328084945678711\n",
+      "cell num: 3, cell runtime: 0.02124476432800293\n",
+      "[1, 2, 4, 6, 7, 8, 9, 10, 11]\n",
       "Checkpoint saved to: checkpoints/pandas.pickle\n"
      ]
     }
@@ -797,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
