--- a/elastic/examples/oneline.ipynb
+++ b/elastic/examples/oneline.ipynb
@@ -35,21 +35,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 1099604468.3083186\n",
+      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 1052276767.0954988\n",
       "|- total bytes: 799920000\n",
-      "|- total read time: 6.914138793945312e-05\n",
-      "|- total write time: 0.7273924350738525\n",
+      "|- total read time: 0.00011515617370605469\n",
+      "|- total write time: 0.7600650787353516\n",
       "|- alpha: 1\n",
       "---------------------------\n",
       "all variables:\n",
-      "name: c\n",
+      "defaultdict(<class 'list'>, {'a': [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x103869a90>], 'b': [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11128eba0>], 'c': [<elastic.core.graph.variable_snapshot.VariableSnapshot object at 0x11128da30>]})\n",
       "name: a\n",
       "name: b\n",
+      "name: c\n",
       "---------------------------\n",
       "variables to migrate:\n",
       "name: a, size: 28\n",
-      "name: c, size: 28\n",
       "name: b, size: 28\n",
+      "name: c, size: 28\n",
       "---------------------------\n",
       "variables to recompute:\n",
       "[]\n",
