--- a/elastic/examples/ex_numpy_all.ipynb
+++ b/elastic/examples/ex_numpy_all.ipynb
@@ -3,20 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    },
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
-    "%load_ext ElasticNotebook"
+    "import time\n",
+    "start_time = time.time()"
    ]
   },
   {
@@ -33,7 +24,6 @@
    },
    "outputs": [],
    "source": [
-    "%%RecordEvent\n",
     "import numpy as np\n",
     "from sklearn import datasets\n",
     "from sklearn.neighbors import KNeighborsClassifier"
@@ -53,7 +43,6 @@
    },
    "outputs": [],
    "source": [
-    "%%RecordEvent\n",
     "iris_X, iris_y = datasets.load_iris(return_X_y=True)"
    ]
   },
@@ -65,14 +54,22 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140\n"
+     ]
+    }
+   ],
    "source": [
-    "%%RecordEvent\n",
     "indices = np.random.permutation(len(iris_X))\n",
     "iris_X_train = iris_X[indices[:-10]]\n",
     "iris_y_train = iris_y[indices[:-10]]\n",
     "iris_X_test = iris_X[indices[-10:]]\n",
-    "iris_y_test = iris_y[indices[-10:]]"
+    "iris_y_test = iris_y[indices[-10:]]\n",
+    "print(len(iris_X_train))"
    ]
   },
   {
@@ -87,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 1, 2, 2, 2, 1, 0, 2])"
+       "array([1, 0, 1, 0, 0, 1, 2, 1, 1, 2])"
       ]
      },
      "execution_count": 5,
@@ -96,7 +93,6 @@
     }
    ],
    "source": [
-    "%%RecordEvent\n",
     "indices = 123\n",
     "knn = KNeighborsClassifier()\n",
     "knn.fit(iris_X_train, iris_y_train)\n",
@@ -107,59 +103,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 1157843579.7235138\n",
-      "|- total bytes: 799920000\n",
-      "|- total read time: 0.00014328956604003906\n",
-      "|- total write time: 0.6907272338867188\n",
-      "|- alpha: 1\n",
-      "---------------------------\n",
-      "all variables:\n",
-      "name: KNeighborsClassifier\n",
-      "name: datasets\n",
-      "name: np\n",
-      "name: iris_X\n",
-      "name: iris_y\n",
-      "name: iris_y_train\n",
-      "name: indices\n",
-      "name: iris_y_test\n",
-      "name: iris_X_train\n",
-      "name: iris_X_test\n",
-      "name: knn\n",
-      "---------------------------\n",
-      "variables to migrate:\n",
-      "name: iris_X, size: 4928\n",
-      "name: iris_y_test, size: 192\n",
-      "name: KNeighborsClassifier, size: 1704\n",
-      "name: iris_y, size: 1312\n",
-      "name: iris_X_train, size: 4608\n",
-      "name: iris_X_test, size: 448\n",
-      "name: indices, size: 28\n",
-      "name: np, size: 72\n",
-      "name: datasets, size: 72\n",
-      "name: iris_y_train, size: 1232\n",
-      "name: knn, size: 48\n",
-      "---------------------------\n",
-      "variables to recompute:\n",
-      "[]\n",
-      "---------------------------\n",
-      "cells to recompute:\n",
-      "[]\n",
-      "Checkpoint saved to: checkpoints/numpy.pickle\n"
+      "KNeighborsClassifier\t datasets\t indices\t iris_X\t iris_X_test\t iris_X_train\t iris_y\t iris_y_test\t iris_y_train\t \n",
+      "knn\t np\t start_time\t time\t \n"
      ]
     }
    ],
    "source": [
-    "%Checkpoint checkpoints/numpy.pickle\n"
+    "%who"
    ]
   },
   {
@@ -171,21 +127,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "KNeighborsClassifier\t datasets\t indices\t iris_X\t iris_X_test\t iris_X_train\t iris_y\t iris_y_test\t iris_y_train\t \n",
-      "knn\t np\t os\t sys\t \n"
+      "0.7090461254119873\n"
      ]
     }
    ],
    "source": [
-    "%who"
+    "print(time.time() - start_time)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
