--- a/elastic/examples/ex_pandas_elastic_save.ipynb
+++ b/elastic/examples/ex_pandas_elastic_save.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -34,7 +34,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4624181552\n"
+      "4593388960\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
       "Columns: 161 entries, date to acquisition_info\n",
       "dtypes: float64(5), int64(82), object(74)\n",
       "memory usage: 11.5 MB\n",
-      "4624183472\n"
+      "4587757952\n"
      ]
     }
    ],
@@ -367,7 +367,7 @@
      "text": [
       "1.52 MB\n",
       "0.20 MB\n",
-      "4626567904 4626567952 4626853344\n"
+      "4595360032 4587641248 4595694672\n"
      ]
     }
    ],
@@ -398,7 +398,7 @@
      "text": [
       "0.09 MB\n",
       "0.05 MB\n",
-      "4626565984 4626856848 4626957472\n"
+      "4595795728 4595796352 4595798656\n"
      ]
     }
    ],
@@ -429,7 +429,7 @@
      "text": [
       "11.47 MB\n",
       "10.10 MB\n",
-      "4626143072\n"
+      "4594952592\n"
      ]
     }
    ],
@@ -457,7 +457,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4626854976\n"
+      "4526067776\n"
      ]
     },
     {
@@ -672,7 +672,7 @@
       "4    Thu\n",
       "Name: day_of_week, dtype: category\n",
       "Categories (7, object): ['Fri', 'Mon', 'Sat', 'Sun', 'Thu', 'Tue', 'Wed']\n",
-      "4620802992 4626141440\n"
+      "4596223344 4596341056\n"
      ]
     }
    ],
@@ -698,7 +698,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4627464752\n"
+      "4594949856\n"
      ]
     }
    ],
@@ -728,71 +728,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 1096115515.982681\n",
+      "migration speed (bps) (total_bytes / (total_read_time + total_write_time * alpha)): 984687400.596722\n",
       "|- total bytes: 799920000\n",
-      "|- total read time: -0.00027298927307128906\n",
-      "|- total write time: 0.7300500869750977\n",
+      "|- total read time: 0.00012040138244628906\n",
+      "|- total write time: 0.8122389316558838\n",
       "|- alpha: 1\n",
       "---------------------------\n",
       "all variables:\n",
-      "name: pd\n",
       "name: gl\n",
-      "name: selected_dtype\n",
+      "name: pd\n",
       "name: mean_usage_b\n",
+      "name: selected_dtype\n",
       "name: mean_usage_mb\n",
       "name: dtype\n",
       "name: mem_usage\n",
       "name: compare_ints\n",
-      "name: gl_int\n",
       "name: converted_int\n",
+      "name: gl_int\n",
       "name: compare_floats\n",
-      "name: converted_float\n",
       "name: gl_float\n",
+      "name: converted_float\n",
       "name: optimized_gl\n",
       "name: gl_obj\n",
       "name: dow_cat\n",
       "name: dow\n",
-      "name: converted_obj\n",
-      "name: col\n",
-      "name: num_total_values\n",
       "name: num_unique_values\n",
+      "name: num_total_values\n",
+      "name: col\n",
+      "name: converted_obj\n",
       "---------------------------\n",
       "variables to migrate:\n",
       "name: mem_usage, size: 160\n",
       "---------------------------\n",
       "variables to recompute:\n",
-      "name: gl_int, size: 1594244\n",
-      "name: dow_cat, size: 3258\n",
-      "name: gl_obj, size: inf\n",
-      "name: converted_obj, size: inf\n",
-      "name: dtype, size: 47\n",
-      "name: pd, size: 72\n",
-      "name: gl_float, size: 97364\n",
-      "name: mean_usage_mb, size: 32\n",
-      "name: col, size: 57\n",
-      "name: num_total_values, size: 28\n",
-      "name: dow, size: inf\n",
-      "name: num_unique_values, size: 28\n",
       "name: optimized_gl, size: inf\n",
-      "name: compare_ints, size: inf\n",
-      "name: converted_float, size: 48764\n",
-      "name: gl, size: inf\n",
       "name: selected_dtype, size: inf\n",
-      "name: compare_floats, size: inf\n",
+      "name: dow, size: inf\n",
+      "name: gl, size: inf\n",
       "name: mean_usage_b, size: 32\n",
+      "name: mean_usage_mb, size: 32\n",
+      "name: gl_obj, size: inf\n",
+      "name: pd, size: 72\n",
+      "name: compare_floats, size: inf\n",
+      "name: converted_obj, size: inf\n",
+      "name: col, size: 57\n",
+      "name: dtype, size: 47\n",
+      "name: num_unique_values, size: 28\n",
+      "name: gl_float, size: 97364\n",
+      "name: dow_cat, size: 3258\n",
+      "name: num_total_values, size: 28\n",
+      "name: converted_float, size: 48764\n",
       "name: converted_int, size: 209144\n",
-      "['gl_int', 'dow_cat', 'gl_obj', 'converted_obj', 'dtype', 'pd', 'gl_float', 'mean_usage_mb', 'col', 'num_total_values', 'dow', 'num_unique_values', 'optimized_gl', 'compare_ints', 'converted_float', 'gl', 'selected_dtype', 'compare_floats', 'mean_usage_b', 'converted_int']\n",
+      "name: compare_ints, size: inf\n",
+      "name: gl_int, size: 1594244\n",
+      "['optimized_gl', 'selected_dtype', 'dow', 'gl', 'mean_usage_b', 'mean_usage_mb', 'gl_obj', 'pd', 'compare_floats', 'converted_obj', 'col', 'dtype', 'num_unique_values', 'gl_float', 'dow_cat', 'num_total_values', 'converted_float', 'converted_int', 'compare_ints', 'gl_int']\n",
       "---------------------------\n",
       "cells to recompute:\n",
-      "cell num: 9, cell runtime: 0.0013208389282226562\n",
-      "cell num: 1, cell runtime: 0.029808759689331055\n",
-      "cell num: 10, cell runtime: 0.03009200096130371\n",
-      "cell num: 5, cell runtime: 0.010228872299194336\n",
-      "cell num: 7, cell runtime: 0.04289674758911133\n",
-      "cell num: 0, cell runtime: 0.03040003776550293\n",
-      "cell num: 8, cell runtime: 0.03224921226501465\n",
-      "cell num: 6, cell runtime: 0.003328084945678711\n",
-      "cell num: 3, cell runtime: 0.02124476432800293\n",
+      "cell num: 8, cell runtime: 0.029889822006225586\n",
+      "cell num: 7, cell runtime: 0.04644298553466797\n",
+      "cell num: 1, cell runtime: 0.02979564666748047\n",
+      "cell num: 3, cell runtime: 0.022238969802856445\n",
+      "cell num: 10, cell runtime: 0.029687881469726562\n",
+      "cell num: 5, cell runtime: 0.01011514663696289\n",
+      "cell num: 6, cell runtime: 0.003381967544555664\n",
+      "cell num: 0, cell runtime: 0.03303885459899902\n",
+      "cell num: 9, cell runtime: 0.0016467571258544922\n",
       "[1, 2, 4, 6, 7, 8, 9, 10, 11]\n",
       "Checkpoint saved to: checkpoints/pandas.pickle\n"
      ]
